# blog-manager-api

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
scripts/: create_zip.sh
source/: main.py
